# pca-planet-start-recognizer

./: PlanetFinder.ipynb  README.md  data.csv  pyproject.toml  requirements-dev.txt  requirements.txt
