[tool.poetry]
name = "pca-planet-start-recognizer"
version = "0.1.0"
description = ""
authors = ["zodiacfireworks <martin.vuelta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.2.10"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
scikit-learn = "^0.22.2"
seaborn = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
